@@ -1,3 +1,7 @@
+2006-07-12 Borut Razem <borut.razem AT siol.net>
+
+	* lib/doc-archive.mk: copy the contents of doc directory
+
 2006-07-09 Borut Razem <borut.razem AT siol.net>
 
 	* components/sdcc.mk, lib/variables.mk: make
